# DataQuality

./: .gitignore  Dockerfile  README.md  instrucoes.txt  pyproject.toml
app/: login.py  main.py
app/.streamlit/: config.toml
app/compoments/: sidebar.py
app/config/: config.py
app/pages/: home.py
app/static/css/: style.css
app/test/: test.py  test_app.py  test_schema.py
src/: schema.py
